frontend: fix console sizing and word wrapping

--- a/frontend/src/pages/EditScript.css
+++ b/frontend/src/pages/EditScript.css
@@ -8,8 +8,7 @@
 }
 
 .scripting-panel {
-    flex-grow: 1;
-
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -63,6 +62,7 @@
     padding: 5px;
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: small;
+    word-break: break-word;
 }
 
 .guild-console-message:nth-of-type(odd) {
